@@ -28,6 +28,8 @@ test.xbm image/x-xbitmap ox
 test.xcf image/x-xcf ox
 test.xpm image/x-xpixmap
 test.xwd image/x-xwindowdump ox
+# Copied from http://djvu.org/resources/
+2001_compression_overview.djvu image/vnd.djvu
 
 # document formats supported by Openoffice.org
 ooo-6.0.doc application/msword
